Нижняя панель + нижняя граница у PowerSpinner

--- a/app/src/main/res/layout/fragment_add_rating.xml
+++ b/app/src/main/res/layout/fragment_add_rating.xml
@@ -29,7 +29,7 @@
         android:progressBackgroundTint="@color/gray555"
         android:progressTint="@color/main_purple"
         android:secondaryProgressTint="@color/main_purple"
-        style="@style/Widget.AppCompat.RatingBar.Indicator"
+        style="?android:attr/ratingBarStyleIndicator"
     />
 
     <androidx.appcompat.widget.AppCompatButton
