--- a/app/src/main/res/layout/fragment_filtered_list.xml
+++ b/app/src/main/res/layout/fragment_filtered_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/filteredListContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,14 +10,12 @@
     tools:context=".ui.filtered_list.FilteredListFragment">
 
     <!-- Верхняя панель -->
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginHorizontal="22dp"
         android:layout_marginTop="25dp"
-        android:gravity="center_vertical"
         android:background="@color/gray111">
 
         <androidx.appcompat.widget.AppCompatImageButton
@@ -26,14 +25,21 @@
             android:background="@null"
             android:scaleType="centerInside"
             android:src="@drawable/ic_arrow_back"
-            android:tint="@color/white" />
+            android:tint="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <TextView
+            android:id="@+id/topBarTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Фильтры"
             android:textColor="@color/white"
             android:textSize="24sp"
+            app:layout_constraintStart_toEndOf="@id/back_button"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="10dp" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -41,11 +47,13 @@
             android:layout_width="wrap_content"
             android:layout_height="36dp"
             android:paddingHorizontal="15dp"
-            android:layout_marginStart="135dp"
             android:text="Изменить"
             android:background="@drawable/rounded_button_cansel_border"
-            android:textColor="@color/gray_for_cancel" />
-    </LinearLayout>
+            android:textColor="@color/gray_for_cancel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/filteredItemsList"
@@ -54,5 +62,4 @@
         android:layout_weight="1"
         android:layout_marginTop="15dp"
         tools:listitem="@layout/item_in_list" />
-
 </LinearLayout>
