--- a/app/src/main/res/layout/fragment_franchise.xml
+++ b/app/src/main/res/layout/fragment_franchise.xml
@@ -53,6 +53,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginTop="15dp"
+        android:layout_marginBottom="60dp"
         tools:listitem="@layout/item_in_list" />
 
 </LinearLayout>
