--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -47,7 +47,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginTop="33dp" />
+        android:layout_marginTop="33dp"
+        android:layout_marginBottom="60dp"
+        />
 
 
 </LinearLayout>
