--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -184,6 +184,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/item_in_list"
+                android:layout_marginBottom="60dp"
                 android:clipToPadding="false"
                 android:overScrollMode="never" />
         </LinearLayout>
