--- a/app/src/main/res/layout/fragment_filtered_list.xml
+++ b/app/src/main/res/layout/fragment_filtered_list.xml
@@ -62,5 +62,6 @@
         android:layout_weight="1"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="60dp"
+        android:scrollbarThumbVertical="@color/main_purple"
         tools:listitem="@layout/item_in_list" />
 </LinearLayout>
