--- a/app/src/main/res/layout/fragment_franchise.xml
+++ b/app/src/main/res/layout/fragment_franchise.xml
@@ -37,15 +37,50 @@
             android:layout_marginStart="10dp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/franchise_info"
+    <LinearLayout
+        android:id="@+id/franchiseContentBlock"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:layout_marginHorizontal="22dp"
-        android:padding="10dp"
-        android:textSize="16sp"
-        tools:text="Список всех частей франшизы: 3 сезона, 2 фильма." />
+        android:orientation="vertical">
+
+        <!-- Заголовок "Описание" и кнопка -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="22dp"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/franchise_description_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Описание"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/franchise_close_button"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="@null"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_eye_open"
+                android:tint="@color/white" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/franchise_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="22dp"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            tools:text="Список всех частей франшизы: 3 сезона, 2 фильма." />
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/franchiseItemsList"
@@ -54,6 +89,7 @@
         android:layout_weight="1"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="60dp"
+        android:scrollbarThumbVertical="@color/main_purple"
         tools:listitem="@layout/item_in_list" />
 
 </LinearLayout>
