--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -258,45 +258,51 @@
                 android:background="@drawable/rounded_button_background"
                 android:drawableStart="@drawable/ic_play"
                 android:drawablePadding="5dp"
-                android:paddingStart="100dp"
-                android:paddingEnd="100dp"/>
+                android:paddingStart="110dp"
+                android:paddingEnd="110dp"/>
 
-            <TextView
-                android:id="@+id/related_label"
-                android:fontFamily="@font/roboto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="42dp"
-                android:layout_marginHorizontal="22dp"
-                android:text="Связанное"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                />
 
             <LinearLayout
+                android:id="@+id/relatedBlock"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginTop="22dp"
-                android:background="@color/gray151515"
-                android:paddingTop="13dp"
-                android:paddingBottom="23dp">
+                android:layout_marginTop="42dp"
+                >
 
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/relatedRecyclerView"
+                <TextView
+                    android:id="@+id/related_label"
+                    android:fontFamily="@font/roboto"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
                     android:layout_marginHorizontal="22dp"
-                    android:orientation="horizontal"
-                    android:overScrollMode="never"
-                    android:clipToPadding="false"
-                    android:paddingBottom="12dp"
-                    android:scrollbars="horizontal"
-                    tools:listitem="@layout/item_related" />
+                    android:text="Связанное"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/white" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="22dp"
+                    android:background="@color/gray151515"
+                    android:paddingTop="13dp"
+                    android:paddingBottom="23dp">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/relatedRecyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginHorizontal="22dp"
+                        android:orientation="horizontal"
+                        android:overScrollMode="never"
+                        android:clipToPadding="false"
+                        android:paddingBottom="12dp"
+                        android:scrollbars="horizontal"
+                        tools:listitem="@layout/item_related" />
+                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
