--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -49,7 +49,7 @@
         android:layout_weight="1"
         android:layout_marginTop="33dp"
         android:layout_marginBottom="60dp"
-        />
+        android:scrollbarThumbVertical="@color/main_purple"/>
 
 
 </LinearLayout>
