--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray111"
     tools:context=".ui.search.SearchFragment"
-    android:fillViewport="true">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingHorizontal="22dp"
         android:paddingTop="25dp"
         android:paddingBottom="15dp">
 
@@ -20,6 +19,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingHorizontal="22dp"
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.SearchView
@@ -45,7 +45,7 @@
                 android:scaleType="centerInside"
                 android:layout_gravity="center_vertical"
                 android:tint="@color/white"
-                android:src="@drawable/ic_microphon" />
+                android:src="@drawable/ic_microphone" />
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/filter_button"
@@ -64,6 +64,7 @@
             android:id="@+id/search_history_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingHorizontal="22dp"
             android:layout_marginTop="20dp"
             android:clipToPadding="false"
             android:overScrollMode="never"
@@ -77,97 +78,125 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="25dp"
+            android:paddingHorizontal="22dp"
             android:visibility="gone">
-
-
-            <TextView
-                android:layout_width="wrap_content"
+            
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Франшиза"
-                android:textSize="18sp"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:layout_marginBottom="10dp" />
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="10dp">
 
-            <FrameLayout
-                android:id="@+id/franchise_images_container"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:padding="16dp">
+                <TextView
+                    android:id="@+id/franchise_title"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="Франшиза"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
 
-                <!-- Левый задний постер -->
-                <ImageView
-                    android:id="@+id/franchise_image_left"
-                    android:layout_width="100dp"
-                    android:layout_height="140dp"
-                    android:layout_marginEnd="60dp"
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/franchise_close_button"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:background="@null"
+                    android:src="@drawable/ic_eye_open"
+                    android:tint="@color/white"
                     android:scaleType="centerInside"
-                    android:layout_gravity="center_vertical|start"
-                    android:alpha="0.7"
-                    app:srcCompat="@drawable/adventure_time"
-                    android:background="@drawable/rounded_image"
-                    android:clipToOutline="true"
-                    android:translationZ="1dp"
-                    android:elevation="1dp" />
+                    android:contentDescription="Закрыть франшизу"
+                    android:padding="2dp" />
+            </LinearLayout>
 
-                <!-- Правый задний постер -->
-                <ImageView
-                    android:id="@+id/franchise_image_right"
-                    android:layout_width="100dp"
-                    android:layout_height="140dp"
-                    android:layout_marginStart="60dp"
-                    android:scaleType="centerInside"
-                    android:layout_gravity="center_vertical|end"
-                    android:alpha="0.7"
-                    android:background="@drawable/rounded_image"
-                    android:clipToOutline="true"
-                    app:srcCompat="@drawable/adventure_time"
-                    android:translationZ="1dp"
-                    android:elevation="1dp" />
 
-                <!-- Центральный главный постер -->
-                <ImageView
-                    android:id="@+id/franchise_image_center"
-                    android:layout_width="125dp"
-                    android:layout_height="175dp"
-                    android:scaleType="centerInside"
-                    android:layout_gravity="center"
-                    android:background="@drawable/rounded_image"
-                    android:clipToOutline="true"
-                    app:srcCompat="@drawable/adventure_time"
-                    android:translationZ="5dp"
-                    android:elevation="5dp" />
-            </FrameLayout>
-
-            <TextView
-                android:id="@+id/franchise_info"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/franchise_content_block"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="6 релизов во франшизе"
-                android:textColor="@color/white"
-                android:layout_marginTop="8dp"
-                android:layout_gravity="center_horizontal" />
+                android:paddingHorizontal="22dp"
+                android:orientation="vertical">
+                <FrameLayout
+                    android:id="@+id/franchise_images_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="16dp">
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/franchise_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Перейти"
-                android:background="@drawable/rounded_button_background"
-                android:textColor="@color/black"
-                android:layout_marginTop="10dp"
-                android:paddingHorizontal="40dp"
-                android:layout_gravity="center_horizontal" />
+                    <!-- Левый задний постер -->
+                    <ImageView
+                        android:id="@+id/franchise_image_left"
+                        android:layout_width="100dp"
+                        android:layout_height="140dp"
+                        android:layout_marginEnd="60dp"
+                        android:scaleType="centerInside"
+                        android:layout_gravity="center_vertical|start"
+                        android:alpha="0.7"
+                        app:srcCompat="@drawable/adventure_time"
+                        android:background="@drawable/rounded_image"
+                        android:clipToOutline="true"
+                        android:translationZ="1dp"
+                        android:elevation="1dp" />
+
+                    <!-- Правый задний постер -->
+                    <ImageView
+                        android:id="@+id/franchise_image_right"
+                        android:layout_width="100dp"
+                        android:layout_height="140dp"
+                        android:layout_marginStart="60dp"
+                        android:scaleType="centerInside"
+                        android:layout_gravity="center_vertical|end"
+                        android:alpha="0.7"
+                        android:background="@drawable/rounded_image"
+                        android:clipToOutline="true"
+                        app:srcCompat="@drawable/adventure_time"
+                        android:translationZ="1dp"
+                        android:elevation="1dp" />
+
+                    <!-- Центральный главный постер -->
+                    <ImageView
+                        android:id="@+id/franchise_image_center"
+                        android:layout_width="125dp"
+                        android:layout_height="175dp"
+                        android:scaleType="centerInside"
+                        android:layout_gravity="center"
+                        android:background="@drawable/rounded_image"
+                        android:clipToOutline="true"
+                        app:srcCompat="@drawable/adventure_time"
+                        android:translationZ="5dp"
+                        android:elevation="5dp" />
+                </FrameLayout>
+
+                <TextView
+                    android:id="@+id/franchise_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="6 релизов во франшизе"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="8dp"
+                    android:layout_gravity="center_horizontal" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/franchise_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Перейти"
+                    android:background="@drawable/rounded_button_background"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:paddingHorizontal="40dp"
+                    android:layout_gravity="center_horizontal" />
+            </LinearLayout>
         </LinearLayout>
-
         <!-- Блок результатов поиска -->
         <LinearLayout
             android:id="@+id/search_results_block"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:visibility="gone">
 
             <TextView
@@ -177,6 +206,7 @@
                 android:textSize="18sp"
                 android:textColor="@color/white"
                 android:textStyle="bold"
+                android:paddingHorizontal="22dp"
                 android:layout_marginBottom="10dp" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -186,7 +216,8 @@
                 tools:listitem="@layout/item_in_list"
                 android:layout_marginBottom="60dp"
                 android:clipToPadding="false"
+                android:scrollbarThumbVertical="@color/main_purple"
                 android:overScrollMode="never" />
         </LinearLayout>
     </LinearLayout>
-</ScrollView>
+</LinearLayout>
